main: fix overflow styles

--- a/src/app/memory-card/flip-card/flip-card.component.less
+++ b/src/app/memory-card/flip-card/flip-card.component.less
@@ -96,6 +96,8 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 64px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   h2 {
